# httprunner

./: .dockerignore  .gitignore  .snapcraft.yaml  BINARY_SIZE_OPTIMIZATION.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.tui  Dockerfile.warp  FLTK_NEXT_STEPS.md  ICED_MIGRATION_NOTES.md  IMPLEMENTATION_SUMMARY.txt  MIGRATION.md  MIGRATION_NOTES.md  Makefile  PORTING_SUMMARY.md  PORT_SUMMARY.md  QUICKSTART.md  README-dockerhub.md  README-snapcraft.md  README.md  REFACTORING.md  RESTRUCTURE.md  build-snap.sh  build-with-resources.ps1  build-with-version.ps1  build.rs  build.zig  clear-icon-cache.ps1  dev-setup.ps1  generate-version.ps1  install.ps1  install.sh  run.ps1  snapcraft.yaml  sonar-project.properties  test-installer.sh  test.http  test_post.http  (+1 more)
httprunner-gui/: Cargo.toml
httprunner-gui/src/: app.rs  request_view.rs
src/cli/: Cargo.toml  README.md  args.rs  build.rs  mod.rs  tests.rs
src/cli/src/: main.rs
src/cli/src/cli/: args.rs  mod.rs  tests.rs
src/cli/src/conditions/: formatter.rs
src/cli/src/logging/: tests.rs
src/cli/src/parser/: condition_parser.rs
src/cli/src/processor/: substitution.rs
src/cli/src/shutdown/: mod.rs  unix.rs  windows.rs
src/cli/src/upgrade/: README.md  linux.rs  macos.rs  unsupported.rs
src/cli/tests/: smoke_basic.rs  smoke_features.rs  smoke_outputs.rs
src/cli/tests/common/: cli.rs  fixtures.rs  mod.rs  server.rs
src/cli/tests/fixtures/discover/: root.local.http
src/cli/tests/fixtures/discover/nested/: child.local.http
src/cli/tests/fixtures/env/: env.local.http  http-client.env.json
src/cli/tests/fixtures/examples/: basic.local.http  features.local.http  intellij.local.http  outputs.local.http
src/core/: Cargo.toml  README.md
src/core/src/: lib.rs  redaction.rs  request_substitution.rs  serializer.rs
src/core/src/assertions/: README.md  tests.rs
src/core/src/colors/: README.md  tests.rs
src/core/src/conditions/: evaluator.rs  json_extractor_tests.rs  mod.rs  tests.rs
src/core/src/discovery/: mod.rs  scanner.rs  tests.rs
src/core/src/environment/: loader.rs  mod.rs  tests.rs
src/core/src/export/: exporter.rs  json_exporter.rs  json_tests.rs  mod.rs  tests.rs
src/core/src/functions/: README.md  address.rs  base64_encode.rs  date.rs  datetime.rs  email.rs  first_name.rs  generator_functions.rs  guid.rs  job_title.rs  last_name.rs  lorem_ipsum.rs  lower.rs  mod.rs  name.rs  number.rs  string_gen.rs  substitution.rs  tests.rs  time.rs  upper.rs  utc_datetime.rs  values.rs
src/core/src/logging/: mod.rs  support.rs  tests.rs  writer.rs
src/core/src/parser/: README.md  condition_parser.rs  condition_parser_tests.rs  file_parser.rs  http-file.peg  http-file.pest  mod.rs  pest_parse_tree.rs  pest_parser.rs  pest_semantic_assembler.rs  substitution_tests.rs  tests.rs
src/core/src/parser/tests/: mod.rs
src/core/src/parser/tests/fixtures/: mixed_content_types.http  mixed_content_types.http.expected  multi_request.http  multi_request.http.expected  post_with_body.http  post_with_body.http.expected  simple_get.http  simple_get.http.expected  with_assertions.http  with_assertions.http.expected  with_conditions.http  with_conditions.http.expected  with_delays.http  with_delays.http.expected  with_depends_on.http  with_depends_on.http.expected  with_function_calls.http  with_timeouts.http  (+4 more)
src/core/src/processor/: README.md  executor.rs  executor_tests.rs  incremental.rs  incremental_async.rs  incremental_loop.rs  incremental_tests.rs  mock_executor.rs  mod.rs  output.rs  processing_result.rs  tests.rs
src/core/src/report/: formatter.rs  html.rs  html_tests.rs  markdown.rs  mod.rs  tests.rs  time_utils.rs  writer.rs
src/core/src/runner/: executor.rs  executor_async.rs  http_builders.rs  incremental_async.rs  mod.rs  response_processor.rs  url_encoding.rs
src/core/src/telemetry/: events.rs  mod.rs  sanitize.rs  tracking.rs
src/core/src/types/: assertion.rs  condition.rs  context.rs  request.rs  result.rs  variable.rs
src/core/src/variables/: json.rs  json_value_tests.rs  mod.rs  parser.rs  substitution.rs  tests.rs
src/gui/: BUILD_WEB.md  Cargo.toml  QUICKSTART.md  README.md  Trunk.toml  WASM_STATUS.md  app.rs  build.rs  file_tree.rs  index.html  main.rs  request_view.rs  results_view.rs
src/gui-tauri/src-tauri/: Cargo.toml  tauri.conf.json
src/gui-tauri/src-tauri/capabilities/: main.json
src/gui-tauri/src-tauri/src/: lib.rs  main.rs
src/gui/.cargo/: config.toml
src/gui/assets/: app.css
src/gui/src/: README.md  app.rs  app_fltk.rs  app_fltk_old.rs  environment_editor.rs  file_tree.rs  lib.rs  main.rs  main.rs.egui.bak  main_fltk.rs  request_editor.rs  request_view.rs  results_view.rs  results_view.rs.bak  results_view_async.rs  state.rs  text_editor.rs  text_editor.rs.bak
src/gui/ui/: main.slint
src/httprunner/: Cargo.toml  README.md  build.rs
src/httprunner/src/: lib.rs
src/lib/: Cargo.toml  README.md  lib.rs
src/lib/assertions/: README.md
src/lib/src/: lib.rs  serializer.rs
src/lib/src/conditions/: tests.rs
src/lib/src/discovery/: tests.rs
src/lib/src/environment/: loader.rs
src/lib/src/export/: exporter.rs  mod.rs  tests.rs
src/lib/src/functions/: README.md  date_functions.rs  generator.rs  generator_functions.rs  generators.rs  mod.rs  substitution.rs  tests.rs  transform_functions.rs  values.rs
src/lib/src/logging/: mod.rs  support.rs  tests.rs  writer.rs
src/lib/src/parser/: README.md  file_parser.rs  mod.rs  tests.rs
src/lib/src/processor/: executor.rs  executor_tests.rs  incremental.rs  incremental_tests.rs  mod.rs  substitution.rs  tests.rs
src/lib/src/report/: html_tests.rs  tests.rs
src/lib/src/runner/: executor.rs  executor_async.rs  mod.rs  response_processor.rs
src/lib/src/telemetry/: app_type.rs  config.rs  mod.rs  sanitize.rs  tracking.rs
src/lib/src/types/: request.rs
src/lib/src/variables/: extractor.rs  extractor_tests.rs  json.rs  tests.rs
src/tui/: Cargo.toml  README.md  build.rs
src/tui/src/: app.rs  environment_editor.rs  file_tree.rs  main.rs  request_view.rs  results_view.rs  state.rs  ui.rs
(+318 files in other folders)
