[package]
name = "httprunner"
version = "0.1.0"
edition = "2024"
authors = ["Christian Helle"]
license = "MIT"
repository = "https://github.com/christianhelle/httprunner"
homepage = "https://github.com/christianhelle/httprunner"
documentation = "https://github.com/christianhelle/httprunner"

[lib]
name = "httprunner"
path = "src/lib.rs"

[[bin]]
name = "httprunner"
path = "src/cli/src/main.rs"

[[bin]]
name = "httprunner-gui"
path = "src/gui/src/main.rs"

[dependencies]
# Shared dependencies
reqwest = { version = "0.12", features = ["blocking", "json", "native-tls"], default-features = false }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
anyhow = { version = "1.0", default-features = false, features = ["std"] }
walkdir = "2.5"
rand = "0.9.2"
regex = "1.12.2"
base64 = { version = "0.22.1", default-features = false, features = ["std"] }
clap = { version = "4.5", features = ["derive", "std", "help", "usage", "error-context"], default-features = false }
eframe = { version = "0.33", features = ["wayland", "x11"] }
egui = "0.33"
rfd = "0.17"
env_logger = "0.11"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = "z"       # Optimize for size
lto = "fat"           # Enable aggressive Link Time Optimization
codegen-units = 1     # Reduce parallel code generation for smaller binary
panic = "abort"       # Abort on panic instead of unwinding
strip = true          # Strip symbols from binary
