[workspace]
members = ["src/lib", "src/cli", "src/gui", "src/tui"]
default-members = ["src/lib", "src/cli", "src/gui", "src/tui"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Christian Helle"]
license = "MIT"
repository = "https://github.com/christianhelle/httprunner"
homepage = "https://github.com/christianhelle/httprunner"
documentation = "https://github.com/christianhelle/httprunner"

[workspace.dependencies]
# Shared dependencies
reqwest = { version = "0.12", features = ["blocking", "json", "native-tls"], default-features = false }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
anyhow = { version = "1.0", default-features = false, features = ["std"] }
walkdir = "2.5"
rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }
regex = { version = "1.12.2", default-features = false, features = ["std", "perf", "unicode-perl", "unicode-case"] }
base64 = { version = "0.22.1", default-features = false, features = ["std"] }
chrono = { version = "0.4.43", default-features = false, features = ["clock", "std"] }
uuid = { version = "1.11", default-features = false, features = ["v4", "std"] }

# Telemetry dependencies (optional)
appinsights = { version = "0.2.3", features = ["blocking"] }
tokio = { version = "1", default-features = false, features = ["rt", "sync", "time", "macros"] }

# CLI dependencies
clap = { version = "4.5", features = ["derive", "std", "help", "usage", "error-context"], default-features = false }

# GUI dependencies
eframe = { version = "0.33", default-features = false }
egui = "0.33"
rfd = "0.17"
env_logger = "0.11"

# Dev dependencies
tempfile = "3"

[profile.release]
opt-level = "z"       # Optimize for size
lto = "fat"           # Enable aggressive Link Time Optimization
codegen-units = 1     # Reduce parallel code generation for smaller binary
panic = "abort"       # Abort on panic instead of unwinding
strip = true          # Strip symbols from binary
