[workspace]
members = ["src/lib", "src/cli", "src/gui", "src/tui"]
default-members = ["src/lib", "src/cli", "src/gui", "src/tui"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Christian Helle"]
license = "MIT"
repository = "https://github.com/christianhelle/httprunner"
homepage = "https://github.com/christianhelle/httprunner"
documentation = "https://github.com/christianhelle/httprunner"

[workspace.dependencies]
# Shared dependencies
reqwest = { version = "0.12", features = ["blocking", "default-tls"], default-features = false }
serde_json = "1.0"
anyhow = { version = "1.0", default-features = false }
walkdir = "2.5"
rand = "0.8"
regex = { version = "1.12.2", default-features = false, features = ["perf", "std", "unicode-case", "unicode-perl"] }
base64 = { version = "0.22.1", default-features = false }
chrono = { version = "0.4.43", default-features = false, features = ["windows-link"] }
uuid = { version = "1.20.0", default-features = false }

# Telemetry dependencies (optional)
appinsights = { version = "0.2.3", features = ["blocking"] }
tokio = { version = "1.49.0", features = ["macros"] }

# CLI dependencies
clap = { version = "4.5", features = ["derive", "error-context", "help", "std", "usage"], default-features = false }

# GUI dependencies
eframe = { version = "0.33", default-features = false }
egui = { version = "0.33", default-features = false }
rfd = { version = "0.17", default-features = false }
env_logger = { version = "0.11", default-features = false }
tempfile = { version = "3", default-features = false }

[profile.dev]
opt-level = 0         # No optimization for fastest compile times
incremental = true    # Enable incremental compilation (caches unchanged code)
codegen-units = 256   # Maximum parallelization for faster builds
lto = false           # Disable LTO for faster linking
debug = true          # Keep debug symbols for debugging

[profile.release]
opt-level = "z"       # Optimize for size
lto = "fat"           # Enable aggressive Link Time Optimization
codegen-units = 1     # Reduce parallel code generation for smaller binary
panic = "abort"       # Abort on panic instead of unwinding
strip = true          # Strip symbols from binary
