[package]
name = "httprunner-gui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "HTTP File Runner - GUI application for executing HTTP requests from .http files"
readme = "README.md"
keywords = ["http", "rest", "api", "testing", "gui"]
categories = [
  "gui",
  "development-tools",
  "web-programming::http-client",
]

[[bin]]
name = "httprunner-gui"
path = "src/main.rs"

[dependencies]
httprunner-lib = { path = "../httprunner-lib" }
eframe = { workspace = true }
egui = { workspace = true }
rfd = { workspace = true }
env_logger = { workspace = true }
anyhow = { workspace = true }
walkdir = { workspace = true }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
