[package]
name = "httprunner"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "HTTP File Runner - CLI tool and library for executing HTTP requests from .http files"
readme = "README.md"
keywords = ["http", "rest", "api", "testing", "cli"]
categories = [
  "command-line-utilities",
  "development-tools",
  "web-programming::http-client",
]

[lib]
name = "httprunner"
path = "src/lib.rs"

[[bin]]
name = "httprunner"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { workspace = true }
walkdir = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
