[package]
name = "httprunner"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "HTTP File Runner - CLI tool for executing HTTP requests from .http files"
readme = "README.md"
keywords = ["http", "rest", "api", "testing", "cli"]
categories = [
  "command-line-utilities",
  "development-tools",
  "web-programming::http-client",
]

[[bin]]
name = "httprunner"
path = "src/main.rs"

[dependencies]
httprunner-core = { path = "../core", version = "0.1.0", features = ["telemetry"] }
clap = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
ctrlc = { version = "3.4.5", features = ["termination"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"
