[package]
name = "httprunner"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "HTTP File Runner - CLI tool for executing HTTP requests from .http files"
readme = "README.md"
keywords = ["http", "rest", "api", "testing", "cli"]
categories = [
  "command-line-utilities",
  "development-tools",
  "web-programming::http-client",
]

[[bin]]
name = "httprunner"
path = "src/main.rs"

[dependencies]
httprunner-core = { path = "../core", version = "0.1.0", features = ["telemetry"] }
clap = { workspace = true }
anyhow = { workspace = true }
ctrlc = { version = "3.5.2", features = ["termination"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_System_Console", "Win32_Foundation"] }

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"
serde_json = { workspace = true }
tempfile = { workspace = true }
tiny_http = "0.12.0"
walkdir = { workspace = true }
