[package]
name = "httprunner-core"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "HTTP File Runner - Core library for executing HTTP requests from .http files"
readme = "README.md"
keywords = ["http", "rest", "api", "testing"]
categories = [
  "development-tools",
  "web-programming::http-client",
]

[features]
default = ["telemetry"]
telemetry = ["appinsights", "tokio"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
walkdir = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
dirs = "6.0.0"
uuid = { workspace = true }

# Platform-specific dependencies (native)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { workspace = true }

# Telemetry dependencies (optional, platform-specific)
appinsights = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "0.12", features = ["json"], default-features = false }
getrandom = { version = "0.2", features = ["js"] }
uuid = { workspace = true, features = ["js"] }
wasm-bindgen-futures = "0.4"
web-time = "1.1"
web-sys = { version = "0.3", features = ["Storage", "Window"] }

[dev-dependencies]
tempfile = { workspace = true }
serial_test = "3.2.0"
