[package]
name = "httprunner-gui"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "HTTP File Runner - GUI application for executing HTTP requests from .http files"
readme = "README.md"
keywords = ["http", "rest", "api", "testing", "gui"]
categories = [
  "gui",
  "development-tools",
  "web-programming::http-client",
]

[[bin]]
name = "httprunner-gui"
path = "src/main.rs"

# Library removed - Iced does not support WASM target yet

[dependencies]
httprunner-core = { path = "../core" }
iced = { version = "0.14.0", features = ["tokio", "image", "svg"] }
env_logger = { workspace = true }
anyhow = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { workspace = true }
dirs = "6.0"
tokio = { workspace = true, features = ["rt-multi-thread"] }
image = "0.25"

# Platform-specific dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rfd = { workspace = true }
walkdir = { workspace = true }

# Note: Iced 0.14 does not support WASM target yet
# The WASM build is temporarily disabled until Iced adds WASM support

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
