[package]
name = "httprunner-gui"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "HTTP File Runner - GUI application for executing HTTP requests from .http files"
readme = "README.md"
keywords = ["http", "rest", "api", "testing", "gui"]
categories = [
  "gui",
  "development-tools",
  "web-programming::http-client",
]

[[bin]]
name = "httprunner-gui"
path = "src/main.rs"

[lib]
name = "httprunner_gui_lib"
crate-type = ["cdylib", "rlib"]

[dependencies]
httprunner-core = { path = "../core" }
env_logger = { workspace = true }
anyhow = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { workspace = true }
dirs = "6.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dioxus = { version = "0.7", features = ["desktop"] }
rfd = { workspace = true }
walkdir = { workspace = true }
tokio = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
dioxus = { version = "0.7", features = ["web"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console", "Storage", "Window"] }
console_error_panic_hook = "0.1"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"
