[package]
name = "httprunner-gui"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "HTTP File Runner - GUI application for executing HTTP requests from .http files"
readme = "README.md"
keywords = ["http", "rest", "api", "testing", "gui"]
categories = [
  "gui",
  "development-tools",
  "web-programming::http-client",
]

[[bin]]
name = "httprunner-gui"
path = "src/main.rs"

[lib]
name = "httprunner_gui_lib"
crate-type = ["cdylib", "rlib"]

[dependencies]
httprunner-core = { path = "../core" }
anyhow = { workspace = true }
dirs = "6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dioxus = { version = "0.7.3", features = ["desktop"] }
dioxus-desktop = "0.7.3"
env_logger = { workspace = true }
image = { version = "0.25.8", default-features = false, features = ["png"] }
rfd = { workspace = true }
walkdir = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
dioxus = { version = "0.7.3", features = ["web"] }
console_error_panic_hook = "0.1"
getrandom = { version = "0.2", features = ["js"] }
tracing-wasm = "0.2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Storage", "Window"] }

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"
