[package]
name = "httprunner"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "HTTP File Runner - Execute HTTP requests from .http files (CLI and GUI)"
readme = "../README.md"
keywords = ["http", "rest", "api", "testing", "cli"]
categories = [
  "command-line-utilities",
  "development-tools",
  "web-programming::http-client",
]

# CLI binary
[[bin]]
name = "httprunner"
path = "../cli/src/main.rs"
required-features = ["cli"]

# GUI binary
[[bin]]
name = "httprunner-gui"
path = "../gui/src/main.rs"
required-features = ["gui"]

[dependencies]
# Library is always included
httprunner-lib = { path = "../lib" }

# CLI dependencies (optional)
clap = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }

# GUI dependencies (optional)
eframe = { workspace = true, optional = true }
egui = { workspace = true, optional = true }
rfd = { workspace = true, optional = true }
env_logger = { workspace = true, optional = true }
walkdir = { workspace = true, optional = true }

# Common
anyhow = { workspace = true }

[features]
default = ["cli", "gui"]
cli = ["clap", "reqwest"]
gui = ["eframe", "egui", "rfd", "env_logger", "walkdir"]

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
