[package]
name = "httprunner-lib"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "HTTP File Runner - Core library for executing HTTP requests from .http files"
readme = "README.md"
keywords = ["http", "rest", "api", "testing"]
categories = [
  "development-tools",
  "web-programming::http-client",
]

[dependencies]
reqwest = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
walkdir = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
