[package]
name = "httprunner-lib"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "HTTP File Runner - Core library for executing HTTP requests from .http files"
readme = "README.md"
keywords = ["http", "rest", "api", "testing"]
categories = [
  "development-tools",
  "web-programming::http-client",
]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
walkdir = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
base64 = { workspace = true }

# Platform-specific dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "0.12", features = ["json"], default-features = false }
getrandom = { version = "0.3", features = ["js"] }
wasm-bindgen-futures = "0.4"
web-time = "1.1"

[dev-dependencies]
tempfile = { workspace = true }
