[package]
name = "httprunner-lib"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "HTTP File Runner - Core library for executing HTTP requests from .http files"
readme = "README.md"
keywords = ["http", "rest", "api", "testing"]
categories = [
  "development-tools",
  "web-programming::http-client",
]

[features]
default = ["telemetry"]
telemetry = ["appinsights", "tokio"]

[dependencies]
serde = { version = "1.0", default-features = false }
serde_json = { workspace = true }
anyhow = { workspace = true }
walkdir = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
dirs = "6.0.0"
uuid = { workspace = true }

# Platform-specific dependencies (native)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { workspace = true }

# Telemetry dependencies (optional, platform-specific)
appinsights = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "0.12", default-features = false }
getrandom = "0.2"
uuid = { workspace = true}
wasm-bindgen-futures = { version = "0.4", default-features = false }
web-time = "1.1"
web-sys = { version = "0.3", default-features = false }

[dev-dependencies]
tempfile = { workspace = true }
serial_test = { version = "3.2.0", default-features = false }
