[package]
name = "httprunner-gui-tauri"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "HTTP File Runner - Tauri GUI application for executing HTTP requests from .http files"
readme = "README.md"

[lib]
name = "httprunner_gui_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "httprunner-gui-tauri"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
httprunner-lib = { path = "../../lib" }
tauri = { version = "2.1", features = ["devtools"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
walkdir = { workspace = true }
dirs = "6.0"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
